tests/fixtures/invalid/sum_float.py
# Cannot call sum() with Float
x = sum(1.0)
